Added about section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
           <a class="nav-link" href="#picture-section">Menus</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#about-section">About</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#video-section">Video Tour</a>
         </li>
         <li class="nav-item">
@@ -106,6 +109,49 @@
       </div>
     </div>
     <!--End Home Section -->
+
+   <!--About-->
+   <div id="about-section">
+    <h2>
+        ABOUT US <br />
+        <span> OUR STORY</span>
+      </h2>
+      <!-- About Section -->
+      <div class="about-container">
+    <div>
+      <img src="./Images/About-us.jpg" alt="">
+    </div>
+    <div>
+      
+      <p>
+        Welcome to our restaurant, where we take pride in serving authentic
+        African cuisine that celebrates the rich flavors and diverse culinary
+        traditions of the continent. Our journey began with a passion for food
+        and a desire to share the vibrant tastes of Africa with our community.
+        From the bustling streets of Lagos to the serene landscapes of Cape
+        Town, our chefs bring a wealth of experience and a deep love for
+        African cooking to every dish we create. We source the freshest
+        ingredients, often partnering with local farmers and suppliers to ensure
+        that our meals are not only delicious but also sustainable. Our menu is
+        a reflection of Africa's culinary heritage, featuring a variety of
+        dishes that showcase the unique spices, herbs, and cooking techniques
+        that define the region. Whether you're craving a hearty bowl of jollof
+        rice, succulent grilled meats, or flavorful vegetarian options, we have
+        something to satisfy every palate. Beyond our food, we strive to create
+        an inviting atmosphere where guests can come together to enjoy good
+        company and great meals. Our restaurant is more than just a place to eat;
+        it's a celebration of culture, community, and the joy of sharing food.
+        We invite you to join us on this culinary adventure and experience the
+        warmth and hospitality that defines our restaurant. Thank you for being
+        a part of our story.
+      </p>
+    </div>
+    </div>
+    <!-- End About Section -->
+    
+   </div>
+    <!--End About-->
+
     <!-- Main Container -->
     <div class="main-container">
       <h1 class="text-center p-5 mb-5 mt-5">
